# icfpc2019-public

./: .gitignore  Cargo.toml  README.md  debug.sh  lambda-cli.py  lambda.conf  lambdad.py  make_best.sh  make_solution.sh  mining.sh  solve_single.sh  submit.sh  submit_best.sh  test.sh  test_solution.sh
lambda-client/: lambda.conf
scripts/: take_only_area.py
src/: lib.rs  main.rs  mine.rs  models.rs  parse.rs  puzzle.rs  solve.rs  utils.rs
