[package]
name = "icfpc2019"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
glob = "0.3.0"
rand = "0.6.5"
rayon = "1.1.0"
indicatif = "0.11.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
serde = {version = "1.0.92", features = ["derive"]}
serde_json = "1.0.39"
chrono = "0.4.6"
log = "0.4.6"
env_logger = "0.6.1"

[lib]
name = "icfpc"
path = "src/lib.rs"
